# AutoStrike_POC

./: .dockerignore  .env.example  .gitignore  404.html  AutoStrike_Documentation.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  index.html  mkdocs.yml  sitemap.xml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  devin-review.yml  docs.yml  sonar.yml
agent/: Cargo.toml  Dockerfile  README.md
agent/src/: client.rs  config.rs  executor.rs  main.rs  output_capture.rs  system.rs
api/: index.html
api/reference/: index.html
architecture/: index.html
architecture/agent/: index.html
architecture/backend/: index.html
architecture/dashboard/: index.html
dashboard/: .env.example  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
dashboard/src/: App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
docs/: index.md
docs/api/: index.md  reference.md
docs/architecture/: agent.md  backend.md  dashboard.md  index.md
docs/guide/: deployment.md  index.md  installation.md  quickstart.md
docs/mitre/: index.md  techniques.md
guide/: index.html
mitre/: index.html
planning/: AutoStrike_Documentation.md  PRESENTATION.md  ROADMAP.md  VISION_V2.md  jira-import-detailed.csv  presentation.html
scripts/: build-agent.sh  coverage.sh  generate-certs.sh  import-atomic.sh  test-all.sh
search/: search_index.json
server/: .env.production  Dockerfile  README.md  go.mod  go.sum
(+166 files in other folders)
